--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 #map {
-    height: 60%;
+    height: 80%;
 }
 
 #filtering_option {
@@ -46,12 +46,17 @@ li {
     margin: 0;
     display: inline-flex;
 }
-
+.rating {
+  display:-webkit-box;
+}
+ .review-snippet{
+  display:flex;
+}
 #yelp-rating {
     width: 100%;
 }
 
-#yelp-rating-title {
+#yelp-rating-title, #yelp-review-snippet_title {
     font-size: 12px;
     margin-right: 15px;
 }
@@ -63,14 +68,13 @@ li {
 
 #yelp-img {
     display: block;
-    margin-top: 10px;
-    width: 50%;
+    width: 30%;
     margin-left: auto;
     margin-right: auto;
 }
 
 #container2 {
-    display: -webkit-inline-box;
+    display: block;
 }
 
 #nav-icon {
@@ -84,7 +88,7 @@ li {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #0091ff;
+    background-color: white;
     overflow-x: hidden;
     padding-top: 30px;
     transition: 0.5s;
@@ -100,7 +104,8 @@ li {
 }
 
 #navigation li:hover {
-    text-decoration: underline;
+    text-decoration: none;
+    background-color: lightgrey;
 }
 
 .closebtn {
@@ -163,4 +168,8 @@ li {
     #container.displaylist, #map.displaylist {
         margin-left: 150px;
     };
+}
+#yelp-logo{
+  float:right;
+  width:40px;
 }
